fix css on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -92,11 +92,6 @@ th {
   text-align: left;
 }
 
-th,
-td {
-  /* padding: 10px 30px; */
-}
-
 th {
   font-size: 30px;
   font-weight: 400;
@@ -400,7 +395,7 @@ table tbody tr td:nth-of-type(4) {
   padding: 20px;
 }
 .info-box:nth-child(4) {
-  padding: 20px 00px 20px 20px;
+  padding: 20px 0px 20px 20px;
 }
 
 .fruit-image {
@@ -467,7 +462,7 @@ input.footer_fruit {
   background-color: transparent;
   border-radius: 0;
   border: none;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.3);;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
   width: 100%;
   height: 60px;
   font-size: 20px;
